[package]
name = "fern-uring"
homepage = "https://github.com/ryanseipp/fern/tree/main/fern-uring"
categories = ["os::linux-apis"]
keywords = ["io_uring", "linux", "asynchronous"]
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = { version = "2.8.0", default-features = false }
rustix = { version = "0.38.44", default-features = false, features = [
  "io_uring",
  "mm",
] }
