[package]
name = "fern-uring"
homepage = "https://github.com/ryanseipp/fern/tree/main/fern-uring"
categories = ["os::linux-apis"]
keywords = ["io_uring", "linux", "asynchronous"]
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = { version = "2.9.0", default-features = false }
rustix = { version = "1.0.1", default-features = false, features = [
  "system",
  "io_uring",
  "mm",
] }

[dev-dependencies]
semver = "1.0.26"
loom = "0.7.2"
divan = "0.1.17"

[[bench]]
name = "producer"
harness = false

[[bench]]
name = "consumer"
harness = false
